--- a/app/component/landing/login/login.html
+++ b/app/component/landing/login/login.html
@@ -1,4 +1,5 @@
 <section class="login-form">
+  <header>cfgram</header>
   <form
     name="loginForm"
     ng-submit="loginCtrl.login()" novalidate>
