--- a/app/component/landing/signup/signup.html
+++ b/app/component/landing/signup/signup.html
@@ -1,4 +1,5 @@
 <section class="signup">
+  <header>cfgram</header>
   <form class="signup-form"
     ng-submit="signupCtrl.signup(signupCtrl.user)"
     no-validate>
@@ -22,4 +23,5 @@
 
     <input type="submit" class="btn-std" value="sign up">
   </form>
+  <footer></footer>
 </section>
