signup styling in progress

--- a/app/component/landing/signup/signup.html
+++ b/app/component/landing/signup/signup.html
@@ -1,5 +1,8 @@
 <section class="signup">
-  <header>cfgram</header>
+
+  <div class="header">cfgram</div>
+  <p>sign up.</p>
+
   <form class="signup-form"
     ng-submit="signupCtrl.signup(signupCtrl.user)"
     no-validate>
