--- a/app/component/landing/signup/_signup.scss
+++ b/app/component/landing/signup/_signup.scss
@@ -1,4 +1,20 @@
-// @import "../../scss/lib/theme/vars";
+@import "../../../scss/lib/theme/vars";
+
+.header {
+  width: 100%;
+  height: 10vw;
+  background: $brand-primary;
+  font-family: $font-primary;
+  color: $white;
+  font-size: 5vw;
+  font-weight: 100;
+  padding-top: 2.5vw;
+
+  img {
+    height: 3vw;
+    width: 3vw;
+  }
+}
 
 
 
@@ -8,23 +24,40 @@
   margin: 0 auto;
   background: #888;
 
+  p {
+    color: $brand-primary;
+    margin-left: $gutter-std;
+    margin-top: 10vw;
+    margin-bottom: $gutter-sm;
+    font-family: $brand-primary;
+    font-size: 3vw;
+    font-weight: 100;
+
+  }
+
 }
 
 .signup-form {
 
   .input-std {
-    width: 90%;
+    width: 66vw;
     height: 6vw;
-    margin: 2vw;
+    margin-left: $gutter-std;
+    margin-bottom: $gutter-std;
+    padding-left: 5vw;
   }
 
   .btn-std {
     width: 30%;
     height: 6vw;
-    margin: 2vw;
     padding: 1%;
     border-radius: 3px;
     float: right;
+    margin-right: $gutter-std;
+    background: $brand-primary;
+    color: $white;
+    font-family: $font-primary;
+    font-size: 2vw;
 
 
   }
