--- a/app/scss/lib/layout/_header.scss
+++ b/app/scss/lib/layout/_header.scss
@@ -1,9 +1,9 @@
 @import "../theme/vars";
 
-header {
-  width: 100%;
-  height: 10vw;
-  background: #444;
-  color: white;
-  font-size: 4vw;
-}
+// header {
+//   width: 100%;
+//   height: 10vw;
+//   background: #444;
+//   color: white;
+//   font-size: 4vw;
+// }
