--- a/app/component/landing/login/_login.scss
+++ b/app/component/landing/login/_login.scss
@@ -1,6 +1,36 @@
 .login-form {
-  width: 80%;
-  height: 90vw;
+  width: 100%;
   margin: 0 auto;
-  background: #888;
+
+  p {
+    color: $brand-primary;
+    margin-left: $gutter-std;
+    margin-top: 5vw;
+    margin-bottom: $gutter-sm;
+    font-family: $brand-primary;
+    font-size: 3vw;
+    font-weight: 100;
+
+  }
+
+  .input-std {
+    width: 80%;
+    height: 6vw;
+    margin-left: $gutter-std;
+    margin-bottom: $gutter-std;
+    padding-left: 5vw;
+  }
+
+  .btn-std {
+    width: 30%;
+    height: 6vw;
+    padding: 1%;
+    border-radius: 3px;
+    float: right;
+    margin-right: 6vw;
+    background: $brand-primary;
+    color: $white;
+    font-family: $font-primary;
+    font-size: 2vw;
+  }
 }
