--- a/app/component/landing/login/login.html
+++ b/app/component/landing/login/login.html
@@ -1,4 +1,11 @@
 <section class="login-form">
+
+  <div class="header">
+    <img src="../../../assets/img/cf-logo.png">
+    <span>cfgram</span>
+  </div>
+  <p>sign in.</p>
+
   <form
     name="loginForm"
     ng-submit="loginCtrl.login()" novalidate>
@@ -8,13 +15,15 @@
         'error': loginForm.username.$invalid,
         'success': loginForm.username.$valid,
       }">
-      <input type="text"
+      <input
+          class="input-std"
+          type="text"
           name="username"
           placeholder="username"
           ng-minlength="4"
           ng-model="loginCtrl.user.username" required>
 
-      <input type="text" placeholder="email">
+      <input class="input-std" type="text" placeholder="email">
     </div>
 
     <div
@@ -22,7 +31,9 @@
         'error': loginForm.password.$invalid && loginForm.$submited,
         'success': loginForm.password.$valid,
       }">
-      <input type="password"
+      <input
+        class="input-std"
+        type="password"
         name="password"
         ng-disabled="loginForm.username.$invalid"
         placeholder="password"
