--- a/app/component/landing/signup/_signup.scss
+++ b/app/component/landing/signup/_signup.scss
@@ -2,32 +2,37 @@
 
 .header {
   width: 100%;
-  height: 10vw;
+  height: 8vw;
   background: $brand-primary;
-  font-family: $font-primary;
-  color: $white;
-  font-size: 5vw;
-  font-weight: 100;
-  padding-top: 2.5vw;
+  padding-top: 2vw;
+  clear: both;
 
   img {
-    height: 3vw;
-    width: 3vw;
+    width: 5vw;
+    height: 5vw;
+    padding-left: 2vw;
+    float: left;
+  }
+
+  span {
+    font-family: $font-primary;
+    color: $white;
+    font-size: 3vw;
+    font-weight: 100;
+    padding-left: 1vw;
+    padding-top: 1vw;
+    float: left;
   }
 }
 
-
-
 .signup {
-  width: 80%;
-  height: 90vw;
+  width: 100%;
   margin: 0 auto;
-  background: #888;
 
   p {
     color: $brand-primary;
     margin-left: $gutter-std;
-    margin-top: 10vw;
+    margin-top: 5vw;
     margin-bottom: $gutter-sm;
     font-family: $brand-primary;
     font-size: 3vw;
@@ -40,7 +45,7 @@
 .signup-form {
 
   .input-std {
-    width: 66vw;
+    width: 80%;
     height: 6vw;
     margin-left: $gutter-std;
     margin-bottom: $gutter-std;
@@ -53,13 +58,10 @@
     padding: 1%;
     border-radius: 3px;
     float: right;
-    margin-right: $gutter-std;
+    margin-right: 6vw;
     background: $brand-primary;
     color: $white;
     font-family: $font-primary;
     font-size: 2vw;
-
-
   }
-
 }
