--- a/app/component/landing/signup/signup.html
+++ b/app/component/landing/signup/signup.html
@@ -1,6 +1,9 @@
 <section class="signup">
 
-  <div class="header">cfgram</div>
+  <div class="header">
+    <img src="../../../assets/img/cf-logo.png">
+    <span>cfgram</span>
+  </div>
   <p>sign up.</p>
 
   <form class="signup-form"
@@ -26,5 +29,4 @@
 
     <input type="submit" class="btn-std" value="sign up">
   </form>
-  <footer></footer>
 </section>
