--- a/app/component/landing/login/_login.scss
+++ b/app/component/landing/login/_login.scss
@@ -1,11 +1,12 @@
 .login-form {
   width: 100%;
   margin: 0 auto;
+  padding-top: 5vw;
 
   p {
     color: $brand-primary;
     margin-left: $gutter-std;
-    margin-top: 5vw;
+    // margin-top: 5vw;
     margin-bottom: $gutter-sm;
     font-family: $brand-primary;
     font-size: 3vw;
