--- a/app/component/landing/login/login.html
+++ b/app/component/landing/login/login.html
@@ -1,9 +1,10 @@
 <section class="login-form">
 
-  <div class="header">
+  <!-- <div class="header">
     <img src="../../../assets/img/cf-logo.png">
     <span>cfgram</span>
-  </div>
+  </div> -->
+  <nav></nav>
   <p>sign in.</p>
 
   <form
