--- a/app/component/landing/signup/_signup.scss
+++ b/app/component/landing/signup/_signup.scss
@@ -1,38 +1,39 @@
 @import "../../../scss/lib/theme/vars";
 
-.header {
-  width: 100%;
-  height: 8vw;
-  background: $brand-primary;
-  padding-top: 2vw;
-  clear: both;
-
-  img {
-    width: 5vw;
-    height: 5vw;
-    padding-left: 2vw;
-    float: left;
-  }
-
-  span {
-    font-family: $font-primary;
-    color: $white;
-    font-size: 3vw;
-    font-weight: 100;
-    padding-left: 1vw;
-    padding-top: 1vw;
-    float: left;
-  }
-}
+// .header {
+//   width: 100%;
+//   height: 8vw;
+//   background: $brand-primary;
+//   padding-top: 2vw;
+//   clear: both;
+//
+//   img {
+//     width: 5vw;
+//     height: 5vw;
+//     padding-left: 2vw;
+//     float: left;
+//   }
+//
+//   span {
+//     font-family: $font-primary;
+//     color: $white;
+//     font-size: 3vw;
+//     font-weight: 100;
+//     padding-left: 1vw;
+//     padding-top: 1vw;
+//     float: left;
+//   }
+// }
 
 .signup {
   width: 100%;
   margin: 0 auto;
+  padding-top: 5vw;
 
   p {
     color: $brand-primary;
     margin-left: $gutter-std;
-    margin-top: 5vw;
+    // margin-top: 5vw;
     margin-bottom: $gutter-sm;
     font-family: $brand-primary;
     font-size: 3vw;
