--- a/app/component/landing/signup/signup.html
+++ b/app/component/landing/signup/signup.html
@@ -1,9 +1,10 @@
 <section class="signup">
 
-  <div class="header">
+  <!-- <div class="header">
     <img src="../../../assets/img/cf-logo.png">
     <span>cfgram</span>
-  </div>
+  </div> -->
+  <nav></nav>
   <p>sign up.</p>
 
   <form class="signup-form"
