--- a/app/component/navbar/navbar.html
+++ b/app/component/navbar/navbar.html
@@ -1,10 +1,10 @@
 <section class="navbar">
-  
-  <h2>cfgram</h2>
 
   <nav>
+    <img src="../../assets/img/cf-logo.png">
+    <span>cfgram</span>
     <div ng-hide="navbarCtrl.hideButtons">
-      <button class="btn-std" ng-click="navbarCtrl.logout()">sign out</button>
+      <button class="btn-sm" ng-click="navbarCtrl.logout()">sign out</button>
     </div>
   </nav>
 </section>
