--- a/app/view/home/home.html
+++ b/app/view/home/home.html
@@ -1,11 +1,13 @@
 <section class="home">
   <create-gallery></create-gallery>
-
-  <ul>
-    <li ng-repeat="gallery in homeCtrl.galleries">
-      <span>name: {{ gallery.name }}</span>
-      <span>description: {{ gallery.desc }}</span>
-      <span>id: {{ gallery._id }}</span>
-    </li>
-  </ul>
+  <div class="gallery-section">
+    <h2>Galleries</h2>
+    <ul>
+      <li ng-repeat="gallery in homeCtrl.galleries">
+        <span>name: {{ gallery.name }}</span>
+        <span>description: {{ gallery.desc }}</span>
+        <span>id: {{ gallery._id }}</span>
+      </li>
+    </ul>
+  </div>
 </section>
