--- a/app/component/landing/login/_login.scss
+++ b/app/component/landing/login/_login.scss
@@ -26,6 +26,7 @@
     height: 6vw;
     padding: 1%;
     border-radius: 3px;
+    border: none;
     float: right;
     margin-right: 6vw;
     background: $brand-primary;
