--- a/app/component/gallery/edit-gallery/edit-gallery.html
+++ b/app/component/gallery/edit-gallery/edit-gallery.html
@@ -2,7 +2,7 @@
   <form class="edit-gallery"
     name="editGallery"
     ng-submit="editGalleryCtrl.updateGallery()"
-    novalidate>
+    no-validate>
 
     <fieldset>
       <span class="item-label">name:</span>
