--- a/app/component/gallery/create-gallery/_create-gallery.scss
+++ b/app/component/gallery/create-gallery/_create-gallery.scss
@@ -1,3 +1,5 @@
+@import "../../../scss/lib/theme/vars";
+
 .create-gallery {
   width: 100%;
   margin: 0 auto;
@@ -7,7 +9,7 @@
     color: $brand-primary;
     margin-left: $gutter-std;
     margin-bottom: $gutter-sm;
-    font-family: $brand-primary;
+    font-family: $font-primary;
     font-size: 3vw;
     font-weight: 100;
   }
