gallery page layout dialed in

--- a/app/component/gallery/create-gallery/create-gallery.html
+++ b/app/component/gallery/create-gallery/create-gallery.html
@@ -26,5 +26,6 @@
     </fieldset>
 
     <button class="btn-std" type="submit">create gallery</button>
+    <h2>Galleries</h2>
   </form>
 </section>
