--- a/app/component/navbar/_navbar.scss
+++ b/app/component/navbar/_navbar.scss
@@ -33,8 +33,9 @@
         margin-right: 5vw;
         background: $brand-secondary;
         border: none;
-        border-radius: 3px;
+        border-radius: 5px;
         margin-top: 1vw;
+        color: $brand-primary;
 
       }
     }
