--- a/app/component/gallery/create-gallery/_create-gallery.scss
+++ b/app/component/gallery/create-gallery/_create-gallery.scss
@@ -10,30 +10,42 @@
     margin-left: $gutter-std;
     margin-bottom: $gutter-sm;
     font-family: $font-primary;
-    font-size: 3vw;
+    font-size: 2.5vw;
     font-weight: 100;
   }
 
 
   .input-std {
-    width: 80%;
+    width: 84%;
     height: 6vw;
     margin-left: $gutter-std;
     margin-bottom: $gutter-std;
+    margin-right: $gutter-std;
     padding-left: 5vw;
+    border: none;
+    border-radius: 5px;
   }
 
   .btn-std {
     width: 30%;
     height: 6vw;
     padding: 1%;
-    border-radius: 3px;
+    border-radius: 5px;
     border: none;
     float: right;
-    margin-right: 6vw;
+    margin-right: $gutter-std;
     background: $brand-primary;
     color: $white;
     font-family: $font-primary;
     font-size: 2vw;
+    font-weight: 100;
+  }
+
+  h2 {
+    margin-left: $gutter-std;
+    margin-top: 15vw;
+    font-family: $font-primary;
+    font-weight: 100;
+    font-size: 2.5vw;
   }
 }
