update button displays properly

--- a/app/component/gallery/create-gallery/create-gallery.html
+++ b/app/component/gallery/create-gallery/create-gallery.html
@@ -10,7 +10,7 @@
       <input
         name="name"
         class="input-std"
-        placeholder="name"
+        placeholder="gallery name"
         type="text"
         ng-model="createGalleryCtrl.gallery.name" required>
     </fieldset>
@@ -20,7 +20,7 @@
       <input
         name="desc"
         class="input-std"
-        placeholder="description"
+        placeholder="gallery description"
         type="text"
         ng-model="createGalleryCtrl.gallery.desc" required>
     </fieldset>
