--- a/app/component/gallery/gallery-item/gallery-item.html
+++ b/app/component/gallery/gallery-item/gallery-item.html
@@ -13,7 +13,7 @@
 
   <edit-gallery ng-if="galleryItemCtrl.showEditGallery" gallery="galleryItemCtrl.gallery"></edit-gallery>
 
-  <div class="update-container">
+  <div class="update-container" ng-if="!galleryItemCtrl.showEditGallery">
     <span class="edit-label" ng-click="galleryItemCtrl.showEditGallery = !galleryItemCtrl.showEditGallery">edit</span>
     <span class="delete-label" ng-click="galleryItemCtrl.deleteGallery()">delete</span>
   </div>
