--- a/app/component/navbar/_navbar.scss
+++ b/app/component/navbar/_navbar.scss
@@ -30,7 +30,7 @@
         float: right;
         width: 12vw;
         height: 4vw;
-        margin-right: 5vw;
+        margin-right: $gutter-std;
         background: $brand-secondary;
         border: none;
         border-radius: 5px;
