--- a/app/component/gallery/edit-gallery/_edit-gallery.scss
+++ b/app/component/gallery/edit-gallery/_edit-gallery.scss
@@ -1,8 +1,45 @@
 @import "../../../scss/lib/theme/vars";
+.edit {
+  margin-top: $gutter-std;
+  margin-bottom: $gutter-std;
 
-.edit-gallery {
-  background: $brand-terciary;
-  margin: $gutter-std $gutter-sm;
-  padding: $gutter-std;
-  border-radius: 5px;
+  .edit-container {
+    background: $brand-terciary;
+    padding: $gutter-sm;
+    border-radius: 5px;
+    margin-bottom: 3.5%;
+    font-family: $font-primary;
+    font-weight: 100;
+    font-size: 2.5vw;
+
+    fieldset {
+      .input-std {
+        padding: 1vw;
+        height: 2.5vw;
+        border: none;
+        background: #C0C0C0;
+        border-radius: 5px;
+
+      }
+      .item-label {
+        font-weight: bold;
+        padding: 1vw;
+      }
+    }
+
+  }
+  .btn-std {
+    float: right;
+    font-family: $font-primary;
+    font-weight: 100;
+    font-size: 2vw;
+    background: $brand-primary;
+    color: $white;
+    border: none;
+    padding: 1vw 6vw;
+    border-radius: 5px;
+
+  }
+
+
 }
