--- a/app/component/gallery/edit-gallery/edit-gallery.html
+++ b/app/component/gallery/edit-gallery/edit-gallery.html
@@ -4,15 +4,17 @@
     ng-submit="editGalleryCtrl.updateGallery()"
     no-validate>
 
-    <fieldset>
-      <span class="item-label">name:</span>
-      <input name="name" class="input-std" ng-model="editGalleryCtrl.gallery.name">
-    </fieldset>
+    <div class="edit-container">
+      <fieldset>
+        <span class="item-label">name:</span>
+        <input name="name" class="input-std" ng-model="editGalleryCtrl.gallery.name">
+      </fieldset>
 
-    <fieldset>
-      <span class="item-label">description:</span>
-      <input name="desc" class="input-std" ng-model="editGalleryCtrl.gallery.desc">
-    </fieldset>
+      <fieldset>
+        <span class="item-label">description:</span>
+        <input name="desc" class="input-std" ng-model="editGalleryCtrl.gallery.desc">
+      </fieldset>
+    </div>
 
     <button class="btn-std">update</button>
   </form>
