--- a/app/component/gallery/edit-gallery/edit-gallery.html
+++ b/app/component/gallery/edit-gallery/edit-gallery.html
@@ -12,7 +12,7 @@
 
       <fieldset>
         <span class="item-label">description:</span>
-        <input name="desc" class="input-std" ng-model="editGalleryCtrl.gallery.desc">
+        <input name="desc" class="input-two" ng-model="editGalleryCtrl.gallery.desc">
       </fieldset>
     </div>
 
