--- a/app/component/gallery/gallery-item/gallery-item.html
+++ b/app/component/gallery/gallery-item/gallery-item.html
@@ -1,6 +1,6 @@
 <li class="gallery-item">
   <div class="current-item" ng-if="!galleryItemCtrl.showEditGallery">
-    <div>
+    <div class="name-label">
       <span class="item-label">name:</span>
       <span>{{ galleryItemCtrl.gallery.name }}</span>
     </div>
