--- a/app/component/gallery/gallery-item/_gallery-item.scss
+++ b/app/component/gallery/gallery-item/_gallery-item.scss
@@ -16,8 +16,10 @@
 
       .item-label {
         font-weight: bold;
-
       }
+    }
+    .name-label {
+      margin-bottom: 1.5vw;
     }
   }
 
