--- a/app/component/navbar/_navbar.scss
+++ b/app/component/navbar/_navbar.scss
@@ -36,6 +36,8 @@
         border-radius: 5px;
         margin-top: 1vw;
         color: $brand-primary;
+        font-size: 2vw;
+        font-family: $font-primary;
 
       }
     }
