fixed create gallery input

--- a/app/component/gallery/create-gallery/_create-gallery.scss
+++ b/app/component/gallery/create-gallery/_create-gallery.scss
@@ -22,7 +22,7 @@
     margin-bottom: $gutter-std;
     margin-right: $gutter-std;
     padding-left: 5vw;
-    border: none;
+    border: 1px solid $brand-terciary;
     border-radius: 5px;
     font-size: 2vw;
   }
