thumbnail container and upload pic logic/markup comlete, added delete to home.html

--- a/app/view/home/home.html
+++ b/app/view/home/home.html
@@ -2,7 +2,14 @@
   <create-gallery></create-gallery>
   <div class="gallery-section">
     <ul>
-      <gallery-item ng-repeat="item in homeCtrl.galleries" gallery="item"></gallery-item>
+      <gallery-item
+        ng-repeat="item in homeCtrl.galleries"
+        gallery="item"
+        delete-done="homeCtrl.galleryDeleteDone(galleryData)"
+        ng-click="homeCtrl.currentGallery = item">
+      </gallery-item>
     </ul>
   </div>
+
+  <tumbnail-container ng-if="homeCtrl.currentGallery" gallery="homeCtrl.currentGallery"></thumbnail-container>
 </section>
