upload-pic renders to page, moving on to styling

--- a/app/view/home/home.html
+++ b/app/view/home/home.html
@@ -10,6 +10,7 @@
       </gallery-item>
     </ul>
   </div>
-
-  <tumbnail-container ng-if="homeCtrl.currentGallery" gallery="homeCtrl.currentGallery"></thumbnail-container>
+  <thumbnail-container ng-if="homeCtrl.currentGallery" gallery="homeCtrl.currentGallery"></thumbnail-container>
+  <thumbnail></thumbnail>
+  <upload-pic></upload-pic>
 </section>
