--- a/app/view/home/home.html
+++ b/app/view/home/home.html
@@ -11,6 +11,6 @@
     </ul>
   </div>
   <thumbnail-container ng-if="homeCtrl.currentGallery" gallery="homeCtrl.currentGallery"></thumbnail-container>
-  <thumbnail></thumbnail>
-  <upload-pic></upload-pic>
+  <!-- <thumbnail></thumbnail>
+  <upload-pic></upload-pic> -->
 </section>
