--- a/app/component/gallery/thumbnail-container/_thumbnail-container.scss
+++ b/app/component/gallery/thumbnail-container/_thumbnail-container.scss
@@ -1,6 +1,28 @@
+@import "../../../scss/lib/theme/vars";
+
 .thumbnail-container {
+
+  h3 {
+    font-family: $font-primary;
+    font-weight: 100;
+    font-size: 3vw;
+  }
   img {
-    height: 50vw;
     max-width: 100%;
+    height: auto;
+  }
+
+  .btn-std {
+    float: right;
+    width: 30%;
+    height: 6vw;
+    padding: 1%;
+    border-radius: 5px;
+    border: none;
+    background: $brand-primary;
+    color: $white;
+    font-family: $font-primary;
+    font-size: 2vw;
+    font-weight: 100;
   }
 }
