--- a/app/component/gallery/upload-pic/upload-pic.html
+++ b/app/component/gallery/upload-pic/upload-pic.html
@@ -9,11 +9,11 @@
       <input class="input-std"
         type="text"
         ng-model="uploadPicCtrl.pic.name"
-        placeholder="name">
+        placeholder="pic name">
       <input class="input-std"
         type="text"
         ng-model="uploadPicCtrl.pic.desc"
-        placeholder="description">
+        placeholder="pic description">
     </fieldset>
 
     <div>
