--- a/app/component/gallery/thumbnail/thumbnail.html
+++ b/app/component/gallery/thumbnail/thumbnail.html
@@ -1,4 +1,4 @@
-<div class-"thumbnail">
+<div class="thumbnail">
   <img ng-src="{{ thumbnailCtrl.pic.imageURI }}"
     alt="{{ thumbnailCtrl.pic.desc }}">
   <span class="btn-std" ng-click="thumbnailCtrl.deletePic()">delete</span>
