--- a/app/component/gallery/upload-pic/_upload-pic.scss
+++ b/app/component/gallery/upload-pic/_upload-pic.scss
@@ -2,37 +2,39 @@
 
 .upload-pic {
   h3 {
-    margin-bottom: $gutter-sm;
+    margin-bottom: $gutter-std;
     text-decoration: underline;
     font-size: 3vw;
     font-family: $font-primary;
   }
 
   .input-std {
-    width: 92.5%;
+    width: 95.5%;
     height: 6vw;
     margin-bottom: $gutter-std;
-    padding-left: 5vw;
-    border: 1px solid $brand-terciary;
+    padding-left: 3vw;
+    border: none;
     border-radius: 5px;
     font-size: 2vw;
     background: $brand-terciary;
+
   }
+
   div {
     .grab-img {
       margin-bottom: $gutter-sm;
       text-decoration: underline;
-      font-size: 2vw;
+      font-size: 2.5vw;
       font-family: $font-primary;
       float: left;
-      padding-top: 1.5vw;
-      padding-left: 40%;
+      padding-top: 1vw;
+      padding-left: 28%;
     }
 
     .btn-std {
       float: right;
       width: 30%;
-      height: 6vw;
+      height: 5vw;
       padding: 1%;
       border-radius: 5px;
       border: none;
