--- a/app/component/gallery/edit-gallery/_edit-gallery.scss
+++ b/app/component/gallery/edit-gallery/_edit-gallery.scss
@@ -14,6 +14,9 @@
 
     fieldset {
       .input-std {
+        font-size: 2vw;
+        font-family: $font-primary;
+        font-weight: 100;
         padding: 1vw;
         min-height: 2vw;
         width: 80%;
@@ -23,6 +26,9 @@
 
       }
       .input-two{
+        font-size: 2vw;
+        font-family: $font-primary;
+        font-weight: 100;
         padding: 1vw;
         min-height: 2vw;
         width: 70%;
