--- a/app/view/home/home.html
+++ b/app/view/home/home.html
@@ -1,7 +1,7 @@
 <section class="home">
   <create-gallery></create-gallery>
 
-  <input ng-model="homeCtrl.gallerySearchTerm" type="text" placeholder="search">
+  <input class="gallery-search" ng-model="homeCtrl.gallerySearchTerm" type="text" placeholder="search">
 
   <div class="gallery-section">
     <ul>
