--- a/app/view/home/_home.scss
+++ b/app/view/home/_home.scss
@@ -7,8 +7,22 @@
   margin-left: 10%;
   margin-right: 10%;
 
+  .gallery-search {
+    height: 6vw;
+    width: 90%;
+    border-radius: 5px;
+    border: 1px solid $brand-terciary;
+    box-sizing: border-box;
+    margin-left: $gutter-std;
+    margin-top: $gutter-sm;
+    margin-bottom: $gutter-sm;
+    padding-left: 3vw;
+    font-size: 2vw;
+
+  }
+
   .gallery-section {
     overflow: auto;
-    height: 30vw;
+    height: 60vw;
   }
 }
