--- a/app/view/landing/_landing.scss
+++ b/app/view/landing/_landing.scss
@@ -9,7 +9,7 @@
   clear: both;
   float: right;
   padding-top: 2vw;
-  padding-right: 6vw;
+  padding-right: $gutter-std;
   font-family: $font-primary;
   font-size: 2vw;
 
